name: qtgui
version: 4.8.0.0
synopsis: Smoke bindings to QtGui
license: BSD3
author: Tristan Ravitch
maintainer: travitch@cs.wisc.edu
category: Graphics
build-type: Simple
cabal-version: >=1.10

library
  default-language: Haskell2010
  exposed-modules:
$modules$
  other-modules:
        Qt.GuiPrivate
  build-depends: base == 4.*, text, humidor
  ghc-options: -Wall
  hs-source-dirs: src
